<resources>
    <string name="app_name">LessonITC</string>
    <string name="Tiel">Sing IN</string>
    <string name="UserName">UserName</string>
    <string name="btConcel">Cencel</string>
    <string name="btlogin">Login</string>
    <string name="To">To</string>
    <string name="title">Title</string>
    <string name="message">Message</string>
    <string name="btCencell">Cencel</string>
    <string name="btSendObject">Send Mail</string>
</resources>
